icons updated in Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Baskervville&family=Kanit:wght@300&family=Lato:ital@1&family=Tiro+Kannada&display=swap');
+
+@layer base {
+    body {
+        @apply font-[Baskervville];
+    }
+    li {
+        @apply px-4;
+        @apply cursor-pointer
+    }
+
+}
